# data-engineer

./: .env.example  BEST_PRACTICES.md  CLEANUP_GUIDE.md  Dockerfile  INTERVIEW_PREP_COMPLETE.md  MONOREPO_README.md  MONOREPO_STRUCTURE.md  PROJECT_STRUCTURE.md  README.md  SETUP_GUIDE.md  START_HERE.md  WALKTHROUGH.md  config.py  docker-compose.full.yml  docker-compose.yml  logger_setup.py  pyproject.toml  requirements.txt
airflow/: AIRFLOW_COMPLETE_GUIDE.md  AIRFLOW_LEARNING_PATH.md  README.md  pyproject.toml  requirements.txt
airflow/dags/: daily_data_pipeline_dag.py  multi_stage_pipeline_dag.py
cricket-project/: cricket_data.csv  cricket_data_1.csv  pyproject.toml  yaml-format.json
cricket-project/src/cricket_project/: data_processor.py  main.py
databricks-learning/: README.md
databricks-learning/data/: users_sample.json
databricks-learning/notebooks/01_basics/: 01_delta_lake_intro.py  02_spark_on_databricks.py  03_databricks_utilities.py
databricks-learning/notebooks/02_etl/: 01_batch_pipeline.py  02_autoloader_streaming.py
databricks-learning/notebooks/03_workflows/: 01_jobs_and_tasks.py
databricks-learning/notebooks/04_advanced/: 01_delta_optimization.py  02_unity_catalog.py
docs/: DEPLOYMENT_GUIDE.md  PIPELINE_ARCHITECTURE.md
gcp-etl-pipeline/: .env.example  .gitignore  README.md  requirements.txt
gcp-etl-pipeline/.github/workflows/: deploy-etl.yml
gcp-etl-pipeline/functions/processor/: main.py  requirements.txt
gcp-etl-pipeline/infra/: deploy.sh  setup_wif.sh  teardown.sh
gcp-etl-pipeline/scraper/: .dockerignore  Dockerfile  main.py  requirements.txt  scraper.py  task_manager.py
gcp-etl-pipeline/tests/: conftest.py  test_processor.py  test_scraper.py
gcp-etl-pipeline/workflows/: etl_pipeline.yaml
interview-prep/: README.md  sql-optimization-walkthrough.md
interview-prep/01-python-fundamentals/: 01-async-patterns.md  02-data-ingestion-scraping.md
interview-prep/02-sql-optimization/: 01-sql-best-practices.md
interview-prep/03-pipeline-design/: 01-architecture.md
interview-prep/04-testing-reliability/: 01-testing-strategies.md
interview-prep/05-devops-tools/: 01-git-docker-kubernetes.md
interview-prep/06-interview-questions/: 01-common-questions.md
interview-prep/07-quick-reference/: 01-cheatsheet.md
interview-prep/08-practice-exercises/: 01-day1-tasks.md  02-day2-tasks.md  03-day3-tasks.md
kafka/: KAFKA_COMPLETE_GUIDE.md  KAFKA_LEARNING_PATH.md  KAFKA_SUMMARY.md  README.md  pyproject.toml  requirements.txt
kafka/consumers/: event_consumer.py
kafka/examples/: level1_junior.py  level2_intermediate.py  level3_advanced.py
kafka/producers/: event_producer.py
kubernetes/: namespace.yaml
kubernetes/airflow/: airflow-deployment.yaml  postgres-statefulset.yaml
kubernetes/configmaps/: pipeline-config.yaml
kubernetes/spark/: spark-job.yaml  spark-rbac.yaml
pandas/: PANDAS_COMPLETE_GUIDE.md  PANDAS_LEARNING_PATH.md  README.md  pyproject.toml
pandas/examples/: level1_fundamentals.py  level2_intermediate.py  level3_advanced.py  level4_mastery.py
production-data-pipeline/: .env  .gitignore  Dockerfile.airflow  QUICK_START.md  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt
production-data-pipeline/airflow/dags/: daily_batch_pipeline.py  kafka_streaming_dag.py  monitoring_dag.py
production-data-pipeline/airflow/plugins/: custom_operators.py
production-data-pipeline/config/: logging_config.yaml  pipeline_config.yaml  prometheus.yml
production-data-pipeline/docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  OPERATIONS.md  SETUP.md  TROUBLESHOOTING.md
production-data-pipeline/scripts/: cleanup.sh  create_airflow_user.py  generate_test_data.py  monitor_pipeline.py  setup.sh
production-data-pipeline/spark/: aggregate_metrics.py  streaming_job.py  transform_daily.py
production-data-pipeline/src/ingestion/: api_connector.py  base_connector.py  decorators.py  file_connector.py  kafka_connector.py
production-data-pipeline/src/monitoring/: alerting.py  lineage.py  metrics.py
production-data-pipeline/src/transformation/: aggregations.py  enrichment.py  spark_transformer.py
production-data-pipeline/src/validation/: data_profiler.py  deduplication.py  quality_gates.py  schema_validator.py
production-data-pipeline/src/warehouse/: snowflake_loader.py  warehouse_loader.py
production-data-pipeline/tests/: test_ingestion.py  test_transformation.py  test_validation.py
production-data-pipeline/tests/integration/: test_e2e_pipeline.py
requirements/: base.txt  dev.txt  prod.txt
scripts/: cleanup-root.sh  generate_sample_data.py  install.sh  reorganize-project.sh  setup-poetry.sh  setup-venv.sh  verify-deps.sh  verify_output.py
spark/: README.md  SPARK_COMPLETE_GUIDE.md  SPARK_LEARNING_PATH.md  pyproject.toml  requirements.txt  spark_pipeline.py
spark/jobs/: bronze_to_silver.py  ingest_kafka.py  silver_to_gold.py
tests/: test_pipeline.py
