[tool.poetry]
name = "airflow-orchestration"
version = "0.1.0"
description = "Apache Airflow DAGs for pipeline orchestration"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
apache-airflow = "^2.8.1"
apache-airflow-providers-apache-spark = "^4.4.3"
apache-airflow-providers-apache-kafka = "^0.6.0"
apache-airflow-providers-postgres = "^5.9.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
pydantic = "^2.0.0"
psycopg2-binary = "^2.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
