[project]
name = "cricket-project"
version = "0.1.0"
description = ""
authors = [
    {name = "danielhoang99",email = "daniel.hoang@techvify.com.vn"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml (>=6.0.3,<7.0.0)",
    "pandas (>=3.0.2,<4.0.0)"
]

[tool.poetry]
packages = [{include = "cricket_project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
