[project]
name        = "production-data-pipeline"
version     = "0.1.0"
description = "Production-grade data pipeline: 500 GB/day from 20 sources with 4-hour SLA"
readme      = "README.md"
authors     = [{ name = "Data Engineer" }]
requires-python = ">=3.11,<3.14"

# ── Core runtime ────────────────────────────────────────────────────────────────
dependencies = [
    # Data processing
    "pyspark>=4.1.0,<5.0.0",
    "pandas>=3.0.0,<4.0.0",
    # Async ingestion
    "aiohttp>=3.13.0,<4.0.0",
    "requests>=2.33.0,<3.0.0",
    # Messaging
    "kafka-python>=2.0.2,<3.0.0",
    # Monitoring & logging
    "prometheus-client>=0.25.0,<1.0.0",
    # Resilience
    "tenacity>=9.0.0,<10.0.0",
    # Config & env
    "pyyaml>=6.0.1,<7.0.0",
    # Data quality
    "jsonschema>=4.20.0,<5.0.0",
]

# ── Build backend ───────────────────────────────────────────────────────────────
[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ── Poetry-specific: source packages & optional groups ─────────────────────────
[tool.poetry]
packages = [{ include = "src" }]

# Airflow (optional – heavy)
[tool.poetry.group.airflow]
optional = true

[tool.poetry.group.airflow.dependencies]
apache-airflow                        = { version = "^3.2.0", extras = ["postgres"] }
apache-airflow-providers-standard     = "^1.12.0"
apache-airflow-providers-apache-spark = "^6.0.0"
apache-airflow-providers-apache-kafka  = "^1.13.0"
apache-airflow-providers-postgres     = "^6.6.0"

# Warehouse connectors (optional).
[tool.poetry.group.warehouse]
optional = true

[tool.poetry.group.warehouse.dependencies]
snowflake-connector-python = "^3.4.0"
snowflake-sqlalchemy       = "^1.5.1"
psycopg2-binary            = "^2.9.9"

# Advanced quality tools (optional – large installs)
[tool.poetry.group.quality]
optional = true

[tool.poetry.group.quality.dependencies]
ydata-profiling    = "^4.6.0"
great-expectations = "^0.18.0"

# Dev / test
[tool.poetry.group.dev.dependencies]
pytest         = "^9.0.0"
pytest-cov     = "^7.0.0"
pytest-asyncio = "^1.3.0"
moto           = { version = "^5.2.0", extras = ["s3"] }
responses      = "^0.26.0"
black          = "^26.0.0"
ruff           = "^0.15.0"
mypy           = "^1.20.0"
pre-commit     = "^4.6.0"

# ── Tool config ─────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths    = ["tests"]
asyncio_mode = "auto"
addopts      = "-v --tb=short"

[tool.black]
line-length    = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version         = "3.12"
ignore_missing_imports = true
