[tool.poetry]
name = "spark-etl"
version = "0.1.0"
description = "PySpark ETL jobs for data pipeline"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.5.0"
pandas = "^2.0.0"
pyarrow = "^13.0.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
